--- a/.gitignore
+++ b/.gitignore
@@ -3,55 +3,103 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
 
-# Virtualenv
-.venv/
-env/
-venv/
-config.py
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
 
-# Poetry
-poetry.lock
-poetry.toml
+# Translations
+*.mo
+*.pot
 
-# PyInstaller
-*.manifest
-*.spec
+# Django stuff:
+*.log
+local_settings.py
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# Pytest cache
-.pytest_cache/
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
 
 # mypy
 .mypy_cache/
 .dmypy.json
 dmypy.json
 
-# IDEs
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
+# Pyre type checker
+.pyre/
 
-# MacOS
-.DS_Store
-
-# System files
-Thumbs.db
-Desktop.ini
-
-# Logs and temp
-*.log
-*.tmp
-
-# Local storage
+# Project specific
 storage/data.json
+storage/cache/
+logs/
+*.log
+*.log.*
+*.zip
+.DS_Store
+.idea/
+.vscode/
+*.session
+*.session-journal
+volumes/
+alembic/versions/*.py
+!alembic/versions/__init__.py
+.cursor/
+.envrc
 
-# Docker
-*.pid
-*.pid.lock
-docker-compose.override.yml
+# Poetry lock file (optional)
+# poetry.lock
