--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,42 @@ services:
     build: .
     container_name: rpg_life_bot
     restart: unless-stopped
+    depends_on:
+      - postgres
+      - redis
     environment:
       - BOT_TOKEN=${BOT_TOKEN}
+      - DB_HOST=postgres
+      - DB_USER=${DB_USER:-postgres}
+      - DB_PASSWORD=${DB_PASSWORD:-postgres}
+      - DB_NAME=${DB_NAME:-rpg_bot}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     volumes:
       - ./storage:/rpg_bot/storage
+      - ./logs:/rpg_bot/logs
     command: poetry run python bot.py
+    
+  postgres:
+    image: postgres:14-alpine
+    container_name: rpg_bot_db
+    environment:
+      - POSTGRES_USER=${DB_USER:-postgres}
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-postgres}
+      - POSTGRES_DB=${DB_NAME:-rpg_bot}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    
+  redis:
+    image: redis:alpine
+    container_name: rpg_bot_redis
+    volumes:
+      - redis_data:/data
+    ports:
+      - "6379:6379"
+    
+volumes:
+  postgres_data:
+  redis_data:
